
[package]
name = "cpi-rollback-example"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"
features = ["all"]

[lib]
crate-type = ["cdylib", "lib"]
name = "cpi_rollback_example"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
caller-dummy = { path = "../caller-dummy", features = ["cpi"] }
